--- a/api/Pipfile
+++ b/api/Pipfile
@@ -6,6 +6,11 @@ name = "pypi"
 [packages]
 fastapi = "*"
 uvicorn = "*"
+sqlalchemy = "*"
+pylint = "*"
+pydantic = "*"
+pytest = "*"
+requests = "*"
 
 [dev-packages]
 
