--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/caseinna/.local/share/virtualenvs/api-cIYaYxjY/bin/python"
+    "python.pythonPath": "/home/rkun/.local/share/virtualenvs/api-xKCHE-o0/bin/python"
 }
