--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ sqlalchemy-utils = "*"
 gunicorn = "*"
 python-socketio = "*"
 typing = "*"
+uvloop = "*"
+httptools = "*"
 
 [dev-packages]
 pylint = "*"
