--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/caseinna/.local/share/virtualenvs/api-cIYaYxjY/bin/python"
+    "python.pythonPath": "/home/hatoyashiki/.local/share/virtualenvs/Initial_is_Goo-BkqsnwZG/bin/python"
 }
