--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@tensorflow/tfjs": "^2.8.1",
     "animejs": "^3.2.1",
     "core-js": "^3.6.5",
+    "socket.io-client": "^3.0.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
