--- a/api/.vscode/settings.json
+++ b/api/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/hatoyashiki/.local/share/virtualenvs/api-R-FcsBZn/bin/python"
+    "python.pythonPath": "/home/caseinna/.local/share/virtualenvs/Initial_is_Goo-LzC1q0h7/bin/python"
 }
